fixed a lot of issues including but not limited to adding java 8 support fixed crash when Serializing and deserializing an arraylist where 2 entries where the same fixed crash when deserializing an empty arraylist fixed issue where arraylists over 10 would crash since they were sorted as string not as an int and that would the fail when trying to insert the 10th index first added an output to what variable cause the deserializing to crash fixed GenericObjectSerializer fixed issues where it would take the wrong deserializer due to it still being a String object not a String (added getSerializerFromType to force use a String not try to get the Serializer of String) fixed crash when trying to deserialize an entry in a hash map that has no value (line an empty arraylist)