@@ -1,5 +1,6 @@
 package de.alex.lib;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -7,12 +8,20 @@ import java.nio.charset.StandardCharsets;
 public class FloatSerializer extends TypeSerializer {
     @Override
     protected String serialize(Object object) {
-        return URLEncoder.encode(object.toString(), StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(object.toString(), StandardCharsets.UTF_8.name());
+        } catch (UnsupportedEncodingException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
     protected Object deserialize(String serialized) {
-        return Float.parseFloat(URLDecoder.decode(serialized, StandardCharsets.UTF_8));
+        try {
+            return Float.parseFloat(URLDecoder.decode(serialized, StandardCharsets.UTF_8.name()));
+        } catch (UnsupportedEncodingException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
