@@ -1,5 +1,6 @@
 package de.alex.lib;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -25,25 +26,38 @@ public class HashMapSerializer extends TypeSerializer {
                 System.out.println(Entry.getValue().getClass().getName() + " does have a registered Serializer");
             }
         }
-        return URLEncoder.encode(builder.toString(), StandardCharsets.UTF_8);
+        try {
+            return URLEncoder.encode(builder.toString(), StandardCharsets.UTF_8.name());
+        } catch (UnsupportedEncodingException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
     protected Object deserialize(String serialized) {
-        String inp = URLDecoder.decode(serialized, StandardCharsets.UTF_8);
+        String inp = null;
+        try {
+            inp = URLDecoder.decode(serialized, StandardCharsets.UTF_8.name());
+        } catch (UnsupportedEncodingException e) {
+            throw new RuntimeException(e);
+        }
         HashMap<Object, Object> hashMap = new HashMap<>();
         String[] vars_together = inp.split("\"");
         HashMap<String, String> mapped_vars = new HashMap<>();
-        if(serialized.isBlank())return hashMap;
+        if(serialized.equals(""))return hashMap;
         for (int i = 0; i < vars_together.length; i += 2) {
             mapped_vars.put(vars_together[i].substring(0, vars_together[i].length() - 1), vars_together[i + 1]);
         }
         for (Map.Entry<String, String> Entry : mapped_vars.entrySet()) {
-            String value = Entry.getValue().split(":")[1];
             String value_type = Entry.getValue().split(":")[0];
+//            String value = Entry.getValue().split(":")[1];
+            String value = "";    //fixes stupid issue when trying to deserialize an empty array list
+            if(!Entry.getValue().equals(value_type+":")){
+                value = Entry.getValue().split(":")[1];
+            }
             String key = Entry.getKey().split(":")[1];
             String key_type = Entry.getKey().split(":")[0];
-            hashMap.put(getSerializer(key_type).deserialize(key), getSerializer(value_type).deserialize(value));
+            hashMap.put(getSerializerFromType(key_type).deserialize(key), getSerializerFromType(value_type).deserialize(value));
         }
         return hashMap;
     }
